--- a/angular.json
+++ b/angular.json
@@ -16,6 +16,9 @@
             "outputPath": "dist/code-world",
             "index": "src/index.html",
             "main": "src/main.ts",
+            "allowedCommonJsDependencies": [
+              "ace-builds"
+            ],
             "polyfills": [
               "zone.js"
             ],
@@ -27,7 +30,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/ace-builds/src-min/ace.js",
+              "node_modules/ace-builds/src-min/mode-javascript.js",
+              "node_modules/ace-builds/src-min/theme-monokai.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -89,7 +96,11 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/ace-builds/src-min/ace.js",
+              "node_modules/ace-builds/src-min/mode-javascript.js",
+              "node_modules/ace-builds/src-min/theme-monokai.js"
+            ]
           }
         }
       }
